components/dot171628491/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: dot171628491
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: dot171628491 
  name: dot171628491
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: dot171628491
