components/dot171628491/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: dot171628491
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: dot171628491 
  name: dot171628491
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: dot171628491
    weight: 100
